Fixed slider portfolio on mobile, added videos

--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,7 @@ header {
 
 .iframe-inner {
     border: white solid 1vw;
+    background-color: black;
 }
 
 .video-description {
